--- a/src/pages/games/topics.css
+++ b/src/pages/games/topics.css
@@ -6,18 +6,15 @@
     text-align: center;
     padding-bottom: 25px;
 }
+
 .new-post {
+    width: 100%;
     height: auto;
-    margin: 0;
 }
 .post-title{
     display: flex;
     justify-content: center;
-    margin: 1% 0 1% 20%;
-}
-.postpicture{
-    width: 90%;
-    margin-left: 5%;
+    margin: 1% 0 0 20%;
 }
 
 .topic-img{
@@ -27,62 +24,85 @@
 
 .post-picture{
     width: 90%;
-    margin-left: 5%;
-    margin-top: 100px;
+    margin: 2% 5%;
+
 }
 
 .topic-text {
         width: 90%;
-        margin: 2% 5% 0 5%;
+        margin: 1% 2% 2% 5%;
         text-align: center;
 }
 }
 @media screen and (min-width: 770px){
-    .post-picture{
-        width: auto;
-        margin: 1% 20% 1% 25%;
-    }
+
     .topic-page {
+
         width: 100%;
         height: auto;
         padding-bottom: 100px;
 
     }
+    .post-picture{
+        width: 70%;
+        margin-right: 15%;
+        margin-left: 15%;
+    }
     .topic-text {
         width: 80%;
         text-align: center;
         margin-left: 10%;
+        margin-top: 1%;
+        margin-bottom: 1%;
     }
+
+    .tags {
+        margin-left: 70%;
+    }
+    .topic-img{
+        width: 80%;
+        margin: 1% 10%;
+    }
+
 }
 
 @media screen and (min-width: 1200px) {
-.topic-page {
-        display: grid;
-        margin: 1% 10% 1% 10%;
-        border: 1px solid lightseagreen;
-        width: 80%;
-        justify-content: center;
-        text-align: center;
-        padding-bottom: 150px;
+.full-page {
+    background-color: #1c2237;
 }
 
+.topic-page {
+        display: grid;
+        margin: 1% 15% 0 15%;
+        border: 3px solid lightseagreen;
+        width: 70%;
+        justify-content: center;
+        text-align: center;
+        padding-bottom: 50px;
+        background-color: lightblue;
+}
 
 .posttitle {
         align-items: center;
         margin: 1% 1% 1% 20%;
 }
-
-.postpicture{
-    display: grid;
-    width: 100%;
-    max-height: 335px;
-    margin: 1% 20% 8% 15%;
+.post-picture{
+    width: auto;
+    margin: 1% 35% 1% 5%;
 }
-
 .topic-text {
     margin-right: 20%;
     width: 80%;
     text-align: center;
+}
+
+.topic-img{
+    width: 60%;
+    margin: 1% 20%;
+}
+
+.advertentie {
+    margin: 5%;
 }
 
 }
