--- a/src/pages/contact/Contact.css
+++ b/src/pages/contact/Contact.css
@@ -1,48 +1,53 @@
 @media screen and (max-width: 769px) {
-   li {
-       justify-content: space-between;
-   }
+    h1 {
+        text-align: center;
+    }
+
+    li {
+        justify-content: space-between;
+    }
+
     p {
         text-align: center;
     }
+
     .contact {
-        width: 94%;
-        margin: 3%;
+        width: 90%;
+        margin: 5%;
+        background-color: lightblue;
     }
-    a {
+
+    .a {
+        margin-left: 25%;
         text-decoration: none;
         display: flex;
         justify-content: space-between;
     }
+
     li {
+
+        list-style: none;
         text-decoration: none;
     }
 }
 
-@media screen and (min-width: 770px) {
-
-    .contact {
-        width: 70%;
-        margin: 10% 15%;
-    }
-
-}
-
-
 @media screen and (min-width: 1200px){
 
-    a {
+    .a {
         text-decoration: none;
         color: lightseagreen;
     }
 
     .contact {
-        margin: 2% 10% 2% 10%;
+        background-color: lightblue;
+        width: 80%;
+        margin: 2% 10% 0 10%;
+        text-align: center;
+        padding-bottom: 20px;
     }
 
     li {
         list-style: none;
-
     }
 
 }
