--- a/src/pages/games/topics.css
+++ b/src/pages/games/topics.css
@@ -27,17 +27,24 @@
     margin: 2% 5%;
 
 }
-
+.full-page-mw {
+    background-image: url("https://images.alphacoders.com/106/thumb-1920-1065889.png");
+}
 .topic-text {
         width: 90%;
         margin: 1% 2% 2% 5%;
         text-align: center;
 }
+
+    .advertentie {
+        margin: 5%;
+        width: 90%;
+    }
 }
 @media screen and (min-width: 770px){
 
     .topic-page {
-
+        background-color: white;
         width: 100%;
         height: auto;
         padding-bottom: 100px;
@@ -64,16 +71,22 @@
         margin: 1% 10%;
     }
 
+    .advertentie {
+        margin: 5%;
+    }
+
 }
 
 @media screen and (min-width: 1200px) {
 .full-page {
     background-color: #1c2237;
 }
-
+.full-page-mw {
+    background-image: url("https://images.alphacoders.com/106/thumb-1920-1065889.png");
+}
 .topic-page {
         display: grid;
-        margin: 1% 15% 0 15%;
+        margin: 2% 15% 0 15%;
         border: 3px solid lightseagreen;
         width: 70%;
         justify-content: center;
