--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -1,44 +1,20 @@
-.login-page {
-    height: auto;
-    display: block;
-    margin: 15% 25% 20% 45%;
-}
+@media screen and (min-width: 1200px) {
 
-.login-container {
-    margin-right: 300px;
-}
-
-.zoekbalk{
-    margin-top: 100px;
-}
-
-.input {
-    width: 200px;
-    margin-top: 10px;
-}
-
-label {
-    width: 200px;
-    margin-top: 10px;
-}
-.login-button {
-    margin-top: 5%;
-    height: 40px;
-    background-color: #1c2237;
-    color: lightseagreen;
-    border: 1px solid black;
-    border-radius: 10px;
-    width: 200px;
-}
-
-
-
-@media screen and (max-width: 769px) {
     .login-page {
-        height: auto;
+        height: 700px;
         display: block;
-        margin-left: 100px;
-        margin-top: 100px;
+        background-image: url("https://i.pinimg.com/originals/ac/78/1d/ac781d057a533ec52f2097d6f75b15d4.jpg");
+    }
+
+    .login-container {
+        margin: 10% 40%;
+        text-align: center;
+        border: 1px solid lightseagreen;
+        border-radius: 16px;
+        width: 350px;
+        background-color: white;
+        align-items: center;
+        padding-bottom: 2%;
     }
 
     .input {
@@ -50,14 +26,61 @@ label {
         width: 200px;
         margin-top: 10px;
     }
+
     .login-button {
-        margin: 2% 45%;
+        margin-top: 5%;
         height: 40px;
         background-color: #1c2237;
         color: lightseagreen;
         border: 1px solid black;
         border-radius: 10px;
         width: 200px;
+    }
+
+}
+
+@media screen and (max-width: 1200px) {
+    .login-page {
+        height: auto;
+        display: block;
+        padding-bottom: 50px;
+        background-image: url("https://i.pinimg.com/originals/ac/78/1d/ac781d057a533ec52f2097d6f75b15d4.jpg")
+
+    }
+
+    .login-container {
+        margin: 10% 20%;
+        text-align: center;
+        border: 1px solid lightseagreen;
+        border-radius: 16px;
+        width: 60%;
+        background-color: white;
+        align-items: center;
+        padding-bottom: 2%;
+    }
+
+
+    .input {
+        width: 200px;
+        margin-top: 10px;
+    }
+
+    label {
+        width: 200px;
+        margin-top: 10px;
+    }
+    .login-button {
+        margin: 2% 15%;
+        height: 40px;
+        background-color: #1c2237;
+        color: lightseagreen;
+        border: 1px solid black;
+        border-radius: 10px;
+        width: 200px;
+    }
+
+    .login-button:disabled{
+        display: none;
     }
 
 
